--- a/src/MakePdf.Wpf/Views/Pages/EasyMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/EasyMode.xaml
@@ -6,6 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MakePdf.Wpf.Views.Pages"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d"
              
@@ -18,46 +19,8 @@
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
     <materialDesign:DialogHost x:Name="dialogHost">
-        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-                <!-- default(32) + margin(10 x 2) -->
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
-            <ListView Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TargetFiles}" SelectedItem="{Binding SelectedItem}" SelectedIndex="{Binding SelectedIndex}" AllowDrop="True" Drop="ListView_Drop" PreviewDragOver="ListView_PreviewDragOver" SelectionMode="Single">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeEasy_Column_Filename, Mode=OneWay}" DisplayMemberBinding="{Binding Filename}" Width="200" />
-                        <GridViewColumn Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeEasy_Column_Path, Mode=OneWay}" DisplayMemberBinding="{Binding Path}" Width="200" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
-            <StackPanel Margin="5 0 0 5" Grid.Row="0" Grid.Column="1">
-                <Button Margin="5" Command="{Binding  UpButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Up, Mode=OneWay}">
-                    <materialDesign:PackIcon Kind="ArrowUpBold" Height="24" Width="24" />
-                </Button>
-                <Button Margin="5" Command="{Binding  DownButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Down, Mode=OneWay}">
-                    <materialDesign:PackIcon Kind="ArrowDownBold" Height="24" Width="24" />
-                </Button>
-                <Button Margin="5" Command="{Binding  DeleteButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Delete, Mode=OneWay}">
-                    <materialDesign:PackIcon Kind="Delete" Height="24" Width="24" />
-                </Button>
-                <Button Margin="5" Command="{Binding  ClearButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Clear, Mode=OneWay}">
-                    <materialDesign:PackIcon Kind="Broom" Height="24" Width="24" />
-                </Button>
-            </StackPanel>
-            <Border Margin="0 5" Padding="5 0 0 0" Background="{DynamicResource MaterialDesignSelection}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
-                <DockPanel  HorizontalAlignment="Stretch">
-                    <Button DockPanel.Dock="Right" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Browse, Mode=OneWay}" Click="BrowseButton_Click" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_OpenFileDialog, Mode=OneWay}" />
-                    <TextBox materialDesign:HintAssist.Hint="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeEasy_OutputFile, Mode=OneWay}" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="OutputFile_PreviewDragOver" />
-                </DockPanel>
-            </Border>
-            <DockPanel Margin="5 10 5 0" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
+        <DockPanel Margin="0 0 0 10">
+            <DockPanel Margin="5 0 5 0" DockPanel.Dock="Bottom">
                 <Button DockPanel.Dock="Left" MinWidth="90" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_BackHome, Mode=OneWay}" Command="{Binding  BackButtonCommand}">
                     <StackPanel Orientation="Horizontal" >
                         <materialDesign:PackIcon Kind="ArrowLeftBold"/>
@@ -72,6 +35,54 @@
                 </Button>
                 <Rectangle />
             </DockPanel>
-        </Grid>
+            <dragablz:TabablzControl DockPanel.Dock="Top" BorderThickness="0">
+                <TabItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_InputOutput, Mode=OneWay}">
+                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <ListView Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TargetFiles}" SelectedItem="{Binding SelectedItem}" SelectedIndex="{Binding SelectedIndex}" AllowDrop="True" Drop="ListView_Drop" PreviewDragOver="ListView_PreviewDragOver" SelectionMode="Single">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeEasy_Column_Filename, Mode=OneWay}" DisplayMemberBinding="{Binding Filename}" Width="200" />
+                                    <GridViewColumn Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeEasy_Column_Path, Mode=OneWay}" DisplayMemberBinding="{Binding Path}" Width="200" />
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <StackPanel Grid.Row="0" Grid.Column="1" Margin="5 0 0 5">
+                            <Button Margin="5" Command="{Binding  UpButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Up, Mode=OneWay}">
+                                <materialDesign:PackIcon Kind="ArrowUpBold" Height="24" Width="24" />
+                            </Button>
+                            <Button Margin="5" Command="{Binding  DownButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Down, Mode=OneWay}">
+                                <materialDesign:PackIcon Kind="ArrowDownBold" Height="24" Width="24" />
+                            </Button>
+                            <Button Margin="5" Command="{Binding  DeleteButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Delete, Mode=OneWay}">
+                                <materialDesign:PackIcon Kind="Delete" Height="24" Width="24" />
+                            </Button>
+                            <Button Margin="5" Command="{Binding  ClearButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Clear, Mode=OneWay}">
+                                <materialDesign:PackIcon Kind="Broom" Height="24" Width="24" />
+                            </Button>
+                        </StackPanel>
+                        <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 5" Padding="5 0 0 0" Background="{DynamicResource MaterialDesignSelection}">
+                            <DockPanel  HorizontalAlignment="Stretch">
+                                <Button DockPanel.Dock="Right" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Browse, Mode=OneWay}" Click="BrowseButton_Click" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_OpenFileDialog, Mode=OneWay}" />
+                                <TextBox materialDesign:HintAssist.Hint="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeEasy_OutputFile, Mode=OneWay}" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="OutputFile_PreviewDragOver" />
+                            </DockPanel>
+                        </Border>
+
+                    </Grid>
+                </TabItem>
+                <TabItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_Option, Mode=OneWay}">
+
+
+                </TabItem>
+            </dragablz:TabablzControl>
+        </DockPanel>
     </materialDesign:DialogHost>
+
 </UserControl>
