--- a/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
@@ -166,7 +166,7 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <CheckBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" IsThreeState="False" Margin="10 0 0 5" IsChecked="{Binding Setting.PageLayout.PageModeUseOutlines}" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_DisplayPdf_BookmarkPanel, Mode=OneWay}" />
+                        <CheckBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" IsThreeState="False" Margin="10 0 0 5" IsChecked="{Binding Setting.DisplayPdf.PageModeUseOutlines}" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_DisplayPdf_BookmarkPanel, Mode=OneWay}" />
                         <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="10" Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_DisplayPdf_PageLayout, Mode=OneWay}" />
                         <ComboBox Grid.Row="1" Grid.Column="1" materialDesign:ComboBoxAssist.ShowSelectedItem="{Binding ElementName=DisplaySelectedItemCheckBox, Path=IsChecked}" Margin="0 8 0 8" HorizontalAlignment="Left" SelectedIndex="{Binding PageLayouts}">
                             <ComboBoxItem IsSelected="True" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_DisplayPdf_PageLayout_SinglePage, Mode=OneWay}" />
