--- a/src/MakePdf.Wpf/Views/Shell.xaml
+++ b/src/MakePdf.Wpf/Views/Shell.xaml
@@ -8,7 +8,8 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="MakePdf" Height="600" Width="800">
+        Title="MakePdf" Height="600" Width="800"
+        Closing="Window_Closing">
     <materialDesign:DialogHost x:Name="dialogHostMain">
         <DockPanel LastChildFill="True">
             <ContentControl DockPanel.Dock="Top" prism:RegionManager.RegionName="MenuRegion" />
