--- a/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
@@ -17,7 +17,7 @@
              TextOptions.TextRenderingMode="Auto"
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
-    <DockPanel Margin="10">
+    <DockPanel Margin="10" AllowDrop="True" Drop="Page_Drop" PreviewDragOver="Item_PreviewDragOver">
         <DockPanel DockPanel.Dock="Bottom" Margin="5 10 5 0">
             <Button DockPanel.Dock="Left" MinWidth="90" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_BackHome, Mode=OneWay}" Command="{Binding  BackButtonCommand}">
                 <StackPanel Orientation="Horizontal" >
@@ -61,12 +61,12 @@
                         <TextBlock Grid.Row="0" Grid.Column="0" DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10" Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_InputOutput_WorkingDirectory, Mode=OneWay}" />
                         <DockPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
                             <Button DockPanel.Dock="Right" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Browse, Mode=OneWay}" Click="SetInputDirectoryButton_Click" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_OpenFolderDialog, Mode=OneWay}" />
-                            <TextBox materialDesign:HintAssist.Hint="" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding WorkingDirectory}" AllowDrop="True" Drop="InputDirectory_Drop" PreviewDragOver="Item_PreviewDragOver" />
+                            <TextBox x:Name="DropAllowedControl1" materialDesign:HintAssist.Hint="" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding WorkingDirectory}" AllowDrop="True" Drop="InputDirectory_Drop" PreviewDragOver="Item_PreviewDragOver" />
                         </DockPanel>
                         <TextBlock Grid.Row="1" Grid.Column="0" DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10" Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_InputOutput_OutputFile, Mode=OneWay}" />
                         <DockPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch">
                             <Button DockPanel.Dock="Right" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_Browse, Mode=OneWay}" Click="SetOutputFileButton_Click" ToolTip="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_OpenFileDialog, Mode=OneWay}" />
-                            <TextBox materialDesign:HintAssist.Hint="" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="Item_PreviewDragOver" />
+                            <TextBox x:Name="DropAllowedControl2" materialDesign:HintAssist.Hint="" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="Item_PreviewDragOver" />
                         </DockPanel>
                         <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" IsThreeState="False" Margin="10 5 0 0" IsChecked="{Binding Setting.DeleteConvertedPdf}" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_InputOutput_DeleteConvertedPdf, Mode=OneWay}" />
                     </Grid>
