--- a/src/MakePdf.Wpf/Views/Pages/Menu.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/Menu.xaml
@@ -26,6 +26,11 @@
     <StackPanel Orientation="Horizontal">
         <Menu IsMainMenu="True" >
             <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuFile, Mode=OneWay}">
+                <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuFile_OpenLogFolder, Mode=OneWay}" Click="OpenLogFolder_Click">
+                    <MenuItem.Icon>
+                        <materialDesign:PackIcon Kind="Folder" />
+                    </MenuItem.Icon>
+                </MenuItem>
                 <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuFile_Exit, Mode=OneWay}" InputGestureText="Alt+F4" Click="Exit_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="ExitToApp" />
