--- a/src/MakePdf.Wpf/Views/Dialogs/Common/ProcessingDialogDetail.xaml
+++ b/src/MakePdf.Wpf/Views/Dialogs/Common/ProcessingDialogDetail.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MakePdf.Wpf.Views.Dialogs.Common.ProcessingDialog"
+﻿<UserControl x:Class="MakePdf.Wpf.Views.Dialogs.Common.ProcessingDialogDetail"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -21,7 +21,10 @@
 
     <StackPanel Margin="10">
         <Label Content="{Binding Title}" x:Name="labelTitle" FontSize="24"/>
-        <Label Content="{Binding Message}" x:Name="labelMessage"/>
-        <ProgressBar Style="{DynamicResource MaterialDesignCircularProgressBar}" HorizontalAlignment="Center" Margin="32" IsIndeterminate="True" Value="0" />
+        <Label Content="{Binding Message}" x:Name="labelMessage" Margin="0 10" />
+        <Border BorderThickness="1" BorderBrush="Silver">
+            <ListBox x:Name="ListBox" SelectionMode="Single" Width="400" Height="300" Margin="0" />
+        </Border>
+        <ProgressBar IsIndeterminate="True" Margin="0 10 0 0"/>
     </StackPanel>
 </UserControl>
