--- a/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
@@ -189,6 +189,7 @@
                         <ComboBox Grid.Row="0" Grid.Column="1" materialDesign:ComboBoxAssist.ShowSelectedItem="{Binding ElementName=DisplaySelectedItemCheckBox, Path=IsChecked}" Margin="0 8 0 8" HorizontalAlignment="Left" SelectedIndex="{Binding CreateBookmarkFromWord}">
                             <ComboBoxItem IsSelected="True" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_Word_CreateBookmarks_FromHeading, Mode=OneWay}" />
                             <ComboBoxItem Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_Word_CreateBookmarks_FromBookmark, Mode=OneWay}" />
+                            <ComboBoxItem Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_Word_CreateBookmarks_None, Mode=OneWay}" />
                         </ComboBox>
                         <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="10" Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Common_ExclusionPattern, Mode=OneWay}" />
                         <TextBox Grid.Row="1" Grid.Column="1" materialDesign:HintAssist.Hint="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.Item_RegularExpression_File2, Mode=OneWay}" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding Setting.WordSetting.ExclusionPattern}" />
